--- a/public/css/application.css
+++ b/public/css/application.css
@@ -120,3 +120,10 @@ td.tplDetail{
 .icon-instrumentos{
     background-image: url(../images/icons/sitemap_color.png)  !important;
 }
+
+.atrasada .x-grid-cell {
+        background-color: #5491BD !important;
+    }
+.emtempo .x-grid-cell {
+        background-color: #2233ff !important;
+    }
