#125 homologação do layout da barra de ferramentas

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -95,6 +95,14 @@
     background-image: url(../images/icons/tag_blue.png)  !important;
 
 }
+.icon-report{
+    background-image: url(../images/icons/report.png)  !important;
+
+}
+.icon-email{
+    background-image: url(../images/icons/email.png)  !important;
+
+}
 table.tplDetail {
     min-width: 300px;
 }
