--- a/application/modules/relatorio/views/scripts/index/geral_operativo.jrxml
+++ b/application/modules/relatorio/views/scripts/index/geral_operativo.jrxml
@@ -3,32 +3,32 @@
 	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="150"/>
 	<property name="ireport.y" value="0"/>
-	<style name="Title" fontName="Arial" fontSize="50" isBold="true"/>
-	<style name="SubTitle" forecolor="#736343" fontName="Arial" fontSize="18"/>
-	<style name="Column header" forecolor="#666666" fontName="Arial" fontSize="12" isBold="true"/>
-	<style name="Detail" fontName="Arial" fontSize="8"/>
-	<style name="Atencao" mode="Opaque" backcolor="#00CC33">
+	<style name="Title" fontName="PT Sans" fontSize="50" isBold="true"/>
+	<style name="SubTitle" forecolor="#736343" fontName="PT Sans" fontSize="18"/>
+	<style name="Column header" forecolor="#666666" fontName="PT Sans" fontSize="12" isBold="true"/>
+	<style name="Detail" fontName="PT Sans" fontSize="8"/>
+	<style name="Atencao" mode="Opaque" backcolor="#2ECC71">
 		<conditionalStyle>
 			<conditionExpression><![CDATA[$F{operativos_andamento_id} <  new Integer("6") &&
 ($F{operativos_data_inicio}.before(new java.util.Date()) &&
 $F{operativos_data_prazo}.after( new java.util.Date() ))
 &&
 ((((new java.util.Date()).getTime()-$F{operativos_data_inicio}.getTime() ).doubleValue()/($F{operativos_data_prazo}.getTime() - $F{operativos_data_inicio}.getTime()).doubleValue()) > new Double(0.8))]]></conditionExpression>
-			<style backcolor="#CCFF00"/>
+			<style backcolor="#F1C40F"/>
 		</conditionalStyle>
 		<conditionalStyle>
 			<conditionExpression><![CDATA[$F{operativos_andamento_id} < new Integer("6")  &&
 ($F{operativos_data_prazo}.before( new java.util.Date() ) )]]></conditionExpression>
-			<style backcolor="#333300"/>
+			<style backcolor="#E74C3C"/>
 		</conditionalStyle>
 		<conditionalStyle>
 			<conditionExpression><![CDATA[$F{operativos_andamento_id}.equals( new Integer("6") ) 
 && $F{operativos_data_prazo}.before( $F{operativos_data_encerramento})]]></conditionExpression>
-			<style backcolor="#660099"/>
+			<style backcolor="#2980B9"/>
 		</conditionalStyle>
 		<conditionalStyle>
 			<conditionExpression><![CDATA[$F{operativos_andamento_id}.equals( new Integer("6") )]]></conditionExpression>
-			<style backcolor="#0066FF"/>
+			<style backcolor="#3498DB"/>
 		</conditionalStyle>
 	</style>
 	<parameter name="programacao_id" class="java.lang.Integer">
