--- a/public/css/application.css
+++ b/public/css/application.css
@@ -154,4 +154,6 @@ td.tplDetail{
 .alert-no-weight .x-grid-cell {
         background-color: #c9cbbf !important;
 }
-    
+.andamento-1{
+    color: lightgray !important;
+}
