--- a/public/css/application.css
+++ b/public/css/application.css
@@ -140,7 +140,7 @@ td.tplDetail{
         background-color: #f1c40f !important;
 }
 .alert-red .x-grid-cell {
-        background-color: #e74c3c !important;
+        background-color: #ff6347 !important;
 }
 .alert-blue .x-grid-cell {
         background-color: #3498db !important;
