--- a/public/css/application.css
+++ b/public/css/application.css
@@ -24,6 +24,9 @@
 .icon-plano{
         background-image: url(../images/icons/overlays.png)  !important;
 }
+.icon-projetos{
+        background-image: url(../images/icons/planning.jpg)  !important;
+}
 
 .icon-org{
         background-image: url(../images/icons/collaboration-cicle16.png)  !important;
